# searchgoat-jupyter

./: LICENSE  README.md  pyproject.toml
docs/: MAC_SETUP_GUIDE.md
notebooks/: README.md  setup.sh  test_searchgoat.ipynb
src/searchgoat_jupyter/: __init__.py  auth.py  client.py  config.py  exceptions.py  job.py  pagination.py
src/searchgoat_jupyter/_utils/: __init__.py  dataframe.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_config.py  test_dataframe.py  test_exceptions.py  test_job.py  test_pagination.py
