[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "searchgoat-jupyter"
version = "0.5.0"
description = "Query Cribl Search from Jupyter notebooks. Get DataFrames."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "JR", email = "jr@ross.moda" }
]
keywords = ["cribl", "search", "dataframe", "pandas", "observability", "MELT"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyarrow>=14.0",
    "nest_asyncio>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/hackish-pub/searchgoat-jupyter"
Documentation = "https://github.com/hackish-pub/searchgoat-jupyter#readme"
Repository = "https://github.com/hackish-pub/searchgoat-jupyter"
Issues = "https://github.com/hackish-pub/searchgoat-jupyter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/searchgoat_jupyter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
